--- a/beetl-eclipse-plugin/plugin.xml
+++ b/beetl-eclipse-plugin/plugin.xml
@@ -13,5 +13,41 @@
             id="org.beetl.editors.BeetlEclipseEditor">
       </editor>
    </extension>
+   <extension
+         point="org.eclipse.ui.commands">
+      <category
+            id="beetl-eclipse-plugin.commands.category"
+            name="Sample Category">
+      </category>
+      <command
+            categoryId="beetl-eclipse-plugin.commands.category"
+            id="beetl-eclipse-plugin.commands.sampleCommand"
+            name="Sample Command">
+      </command>
+   </extension>
+   <extension
+         point="org.eclipse.ui.handlers">
+      <handler
+            class="beetleclipseplugin.handlers.SampleHandler"
+            commandId="beetl-eclipse-plugin.commands.sampleCommand">
+      </handler>
+   </extension>
+   <extension
+         point="org.eclipse.ui.bindings">
+      <key
+            commandId="beetl-eclipse-plugin.commands.sampleCommand"
+            contextId="beetl-eclipse-plugin.beetlcontext"
+            schemeId="org.eclipse.ui.defaultAcceleratorConfiguration"
+            sequence="M1+6">
+      </key>
+   </extension>
+   <extension
+         point="org.eclipse.ui.contexts">
+      <context
+            id="beetl-eclipse-plugin.beetlcontext"
+            name="name"
+            parentId="org.eclipse.ui.textEditorScope">
+      </context>
+   </extension>
 
 </plugin>
