提交快捷键，能切换的beetl 插件，能快速定位

--- a/beetl-eclipse-plugin/plugin.xml
+++ b/beetl-eclipse-plugin/plugin.xml
@@ -36,7 +36,7 @@
          point="org.eclipse.ui.bindings">
       <key
             commandId="beetl-eclipse-plugin.commands.sampleCommand"
-            contextId="beetl-eclipse-plugin.beetlcontext"
+           contextId="org.eclipse.ui.textEditorScope"
             schemeId="org.eclipse.ui.defaultAcceleratorConfiguration"
             sequence="M1+6">
       </key>
