--- a/beetl-eclipse-plugin/plugin.xml
+++ b/beetl-eclipse-plugin/plugin.xml
@@ -29,6 +29,12 @@
       		name = "nextStatCommand"
             id="beetl-eclipse-plugin.command.nextStatCommand">
       </command>
+       <command
+      		categoryId="beetl-eclipse-plugin.commands.category"
+      		name = "preStatCommand"
+            id="beetl-eclipse-plugin.command.preStatCommand">
+      </command>
+      
    </extension>
    <extension
          point="org.eclipse.ui.handlers">
@@ -43,7 +49,21 @@
             class="org.beetl.editor.handler.NextStatHandler"
             commandId="beetl-eclipse-plugin.command.nextStatCommand">
       </handler>
+      
+      
    </extension>
+    <extension
+         point="org.eclipse.ui.handlers">
+     <handler
+            class="org.beetl.editor.handler.PreStatHandler"
+            commandId="beetl-eclipse-plugin.command.preStatCommand" >
+           
+      </handler>
+      
+      
+   </extension>
+   
+   
    
    <extension
          point="org.eclipse.ui.bindings">
@@ -51,9 +71,11 @@
             commandId="beetl-eclipse-plugin.command.editorToggleCommand"
            contextId="org.eclipse.ui.textEditorScope"
             schemeId="org.eclipse.ui.defaultAcceleratorConfiguration"
-            sequence="M1+6">
+            sequence="M1+4">
       </key>
    </extension>
+   
+   
    
     <extension
          point="org.eclipse.ui.bindings">
@@ -63,7 +85,21 @@
             schemeId="org.eclipse.ui.defaultAcceleratorConfiguration"
             sequence="M1+2">
       </key>
+    
    </extension>
+   
+    <extension
+         point="org.eclipse.ui.bindings">
+      <key
+      	
+           commandId="beetl-eclipse-plugin.command.preStatCommand"
+            contextId="beetl-eclipse-plugin.beetlcontext"
+            schemeId="org.eclipse.ui.defaultAcceleratorConfiguration"
+            sequence="M1+3">
+      </key>
+    
+   </extension>
+   
    <extension
          point="org.eclipse.ui.contexts">
       <context
