--- a/beetl-eclipse-plugin/plugin.xml
+++ b/beetl-eclipse-plugin/plugin.xml
@@ -40,7 +40,13 @@
       		name = "anotherPairCommand"
             id="beetl-eclipse-plugin.command.anotherPairCommand">
       </command>
+      <command
+      		categoryId="beetl-eclipse-plugin.commands.category"
+      		name = "foldingCommand"
+            id="beetl-eclipse-plugin.command.editorFoldingCommand">
+      </command>
       
+     
    </extension>
    
    
@@ -77,7 +83,24 @@
       </handler>
    </extension>
    
+    <extension
+         point="org.eclipse.ui.handlers">
+     <handler
+            class="org.beetl.editor.handler.FoldingHandler"
+            commandId="beetl-eclipse-plugin.command.editorFoldingCommand" >           
+      </handler>
+   </extension>
    
+   
+    <extension
+         point="org.eclipse.ui.bindings">
+      <key
+            commandId="beetl-eclipse-plugin.command.editorFoldingCommand"
+           contextId="beetl-eclipse-plugin.beetlcontext"
+            schemeId="org.eclipse.ui.defaultAcceleratorConfiguration"
+            sequence="M1+5">
+      </key>
+   </extension>   
    
    <extension
          point="org.eclipse.ui.bindings">
