存储模版目录 到属性页

--- a/beetl-eclipse-plugin/plugin.xml
+++ b/beetl-eclipse-plugin/plugin.xml
@@ -158,6 +158,20 @@
             parentId="org.eclipse.ui.textEditorScope">
       </context>
    </extension>
+   <extension
+         point="org.eclipse.ui.preferencePages">
+      <page
+            class="org.beetl.preferences.PreferencePage"
+            id="org.beetl.preferences.PreferencePage"
+            name="Beetl">
+      </page>
+   </extension>
+   <extension
+         point="org.eclipse.core.runtime.preferences">
+      <initializer
+            class="org.beetl.preferences.PreferenceInitializer">
+      </initializer>
+   </extension>
    
   
    
