--- a/beetl-eclipse-plugin/plugin.xml
+++ b/beetl-eclipse-plugin/plugin.xml
@@ -45,7 +45,12 @@
       		name = "foldingCommand"
             id="beetl-eclipse-plugin.command.editorFoldingCommand">
       </command>
-      
+     
+     <command
+      		categoryId="beetl-eclipse-plugin.commands.category"
+      		name = "commentOutCommand"
+            id="beetl-eclipse-plugin.command.commentOutCommand">
+      </command> 
      
    </extension>
    
@@ -88,6 +93,14 @@
      <handler
             class="org.beetl.editors.handler.FoldingHandler"
             commandId="beetl-eclipse-plugin.command.editorFoldingCommand" >           
+      </handler>
+   </extension>
+   
+   <extension
+         point="org.eclipse.ui.handlers">
+     <handler
+            class="org.beetl.editors.handler.CommentOutHandler"
+            commandId="beetl-eclipse-plugin.command.commentOutCommand" >           
       </handler>
    </extension>
    
@@ -175,6 +188,15 @@
            
       </page>
     
+   </extension>
+   <extension
+         point="org.eclipse.ui.bindings">
+      <key
+            commandId="beetl-eclipse-plugin.command.commentOutCommand"
+            contextId="beetl-eclipse-plugin.beetlcontext"
+            schemeId="org.eclipse.ui.defaultAcceleratorConfiguration"
+            sequence="M1+/">
+      </key>
    </extension>
    
 
