错误提示，但似乎影响了partion操作

--- a/beetl-eclipse-plugin/build.properties
+++ b/beetl-eclipse-plugin/build.properties
@@ -4,4 +4,5 @@ javacDefaultEncoding.. = UTF-8
 bin.includes = plugin.xml,\
                META-INF/,\
                .,\
-               icons/
+               icons/,\
+               lib/antlr4-runtime-4.2.2.jar
